# techno_2026

./: .gitignore  README.md  docker-compose.yaml  nginx.conf  package-lock.json  run.sh
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_26_1442-f628a6b482f8_postgis.py  2026_04_27_1241-2dba33153721_auth_users.py  2026_04_27_1438-2683ed3b0711_add_teams_table.py  2026_04_27_1508-3ffc3472e115_add_quests_table.py  2026_04_28_1313-d1f066ad0642_edit_team_members_table.py  2026_04_28_2328-494fc53c3ce8_add_files_table.py  2026_04_29_0255-7d0e0ac9b6f1_add_quest_category_age_group.py  2026_04_29_0500-1a2b3c4d5e6f_add_checkpoints_table.py  2026_04_29_0520-9f8e7d6c5b4a_expand_quest_create_payload.py  2026_04_29_0640-2b7c9d4e5f6a_add_quest_sessions.py
backend/certificates/: private_key.pem  public_key.pem
backend/scripts/: seed_demo_data.py
backend/src/: __init__.py  config.py  dao.py  database.py  exceptions.py  main.py
backend/src/accounts/: dao.py  models.py  router.py  schemas.py  service.py
backend/src/auth/: config.py  dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/checkpoints/: __init__.py  dao.py  models.py  schemas.py  service.py
backend/src/quest_sessions/: __init__.py  dao.py  models.py  router.py  schemas.py  service.py
backend/src/quests/: __init__.py  dao.py  models.py  router.py  schemas.py  service.py
backend/src/teams/: dao.py  models.py  router.py  schemas.py  service.py
frontend/: Dockerfile  (+16 more)
(+77 files in other folders)
